--- a/src/cap/maps/level_small.properties
+++ b/src/cap/maps/level_small.properties
@@ -45,7 +45,7 @@ Height=10
 8,0=0
 7,9=0
 7,4=3
-Width=11
+Width=10
 7,0=1
 6,9=0
 6,6=4
@@ -53,3 +53,5 @@ Width=11
 5,9=0
 5,8=5
 5,0=0
+#added by me
+Live=5
